--- a/index.html
+++ b/index.html
@@ -19,7 +19,8 @@
         <header class="header-main">
 
             <div class="header-logo">
-                <p>Clément Wds</p>
+                <h1>Silver Bird</h1>
+                <p>Watch it fly</p>
             </div>
 
             <!-- NAV : MENU -->
@@ -73,25 +74,19 @@
             <div class="section-card">
                 <div class="card-grid">
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image3.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image3.png');"></div>
                         <div class="card-content">
                             <p>Patek Philippe & Tiffany : une histoire d'amour qui ne fait que durer</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image4.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image4.png');"></div>
                         <div class="card-content">
                             <p>Bien entretenir sa montres pendant ses déplacement professionnels</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image5.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image5.png');"></div>
                         <div class="card-content">
                             <p>Comment bien choisir une montre de collection</p>
                         </div>
@@ -103,27 +98,21 @@
             <div class="section-card">
                 <div class="card-grid">
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image6.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image6.png');"></div>
                         <div class="card-content">
                             <p>Le Grand Palais ouvre ses portes aux voitures de collection</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image7.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image7.png');"></div>
                         <div class="card-content">
                             <p>Nouvelle Ferrari sur piste ou en ville : notre revue au volant</p>
                         </div>
-                        <div class="card-item">
-                            <div class="card-thumbnail">
-                                <img src="assets/images/Image8.png">
-                            </div>
-                            <div class="card-content">
-                                <p>Nouvelle Ferrari sur piste ou en ville : notre revue au volant</p>
-                            </div>
+                    </div>
+                    <div class="card-item">
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image8.png');"></div>
+                        <div class="card-content">
+                            <p>Nouvelle Ferrari sur piste ou en ville : notre revue au volant</p>
                         </div>
                     </div>
                 </div>
@@ -144,25 +133,19 @@
             <div class="section-card">
                 <div class="card-grid">
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image9.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image9.png');"></div>
                         <div class="card-content">
                             <p>Aberlour : l'un des meilleurs single malt wisky</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image10.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image10.png');"></div>
                         <div class="card-content">
                             <p>Rencontre avec les fondateurs du groupe Big Mamma</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image11.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image11.png');"></div>
                         <div class="card-content">
                             <p>Costume : comment bien l'accorder et le choisir ?</p>
                         </div>
@@ -174,25 +157,19 @@
             <div class="section-card">
                 <div class="card-grid">
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image12.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image12.png');"></div>
                         <div class="card-content">
                             <p>Le Grand Palais ouvre ses portes aux voitures de collection</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image13.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image13.png');"></div>
                         <div class="card-content">
                             <p>Nouvelle Ferari sur piste ou en ville : notre revue au volant</p>
                         </div>
                     </div>
                     <div class="card-item">
-                        <div class="card-thumbnail">
-                            <img src="assets/images/Image14.png">
-                        </div>
+                        <div class="card-thumbnail" style="background-image: url('assets/images/Image14.png');"></div>
                         <div class="card-content">
                             <p>Le Grand Prix de l'Arc de Triomphe arrive à Paris avec un nouveau favori</p>
                         </div>
